RESOLVED FIXED185333
[iOS] Release page load process assertion if the screen is locked
https://bugs.webkit.org/show_bug.cgi?id=185333
Summary [iOS] Release page load process assertion if the screen is locked
Chris Dumez
Reported 2018-05-04 16:09:46 PDT
We normally take a background process assertion during page loads to allow them to complete even if the tab / app is backgrounded. We should however avoid doing so when the backgrounding is caused by the screen locking. Keeping the process assertion in this case would prevent the whole device from sleeping longer than it should, thus negatively impacting power.
Attachments
Patch (7.65 KB, patch)
2018-05-04 16:35 PDT, Chris Dumez
no flags
Patch (7.60 KB, patch)
2018-05-10 15:10 PDT, Chris Dumez
no flags
Archive of layout-test-results from webkit-cq-02 for mac-sierra (1.09 MB, application/zip)
2018-05-10 15:42 PDT, WebKit Commit Bot
no flags
Chris Dumez
Comment 1 2018-05-04 16:35:50 PDT
Geoffrey Garen
Comment 2 2018-05-07 14:30:06 PDT
Comment on attachment 339611 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=339611&action=review r=me > Source/WebKit/UIProcess/ios/WebPageProxyIOS.mm:683 > + // We normally delay process suspension when the app is backgrounded until the current page load completes. However, > + // we do not want to do so when the screen is locked for power reasons. FWIW, I think we also consider screen lock to be a strong signal that the user isn't interested in that loaded webpage anymore. Simple backgrounding can happen just by switching between apps, even in a workflow where you mean to use both apps. So, in that case, we want to avoid failing the load. But screen lock is not a part of any meaningful intentional workflow. It's what you do before you put the device away.
WebKit Commit Bot
Comment 3 2018-05-07 14:57:31 PDT
Comment on attachment 339611 [details] Patch Clearing flags on attachment: 339611 Committed r231458: <https://trac.webkit.org/changeset/231458>
WebKit Commit Bot
Comment 4 2018-05-07 14:57:32 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2018-05-07 14:58:24 PDT
Chris Dumez
Comment 6 2018-05-08 11:59:31 PDT
Rolled out in <https://trac.webkit.org/changeset/231498> due to conflict.
WebKit Commit Bot
Comment 7 2018-05-10 15:06:57 PDT
Comment on attachment 339611 [details] Patch Rejecting attachment 339611 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 339611, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WebKit/ChangeLog contains OOPS!. Full output: http://webkit-queues.webkit.org/results/7643394
Chris Dumez
Comment 8 2018-05-10 15:10:05 PDT
WebKit Commit Bot
Comment 9 2018-05-10 15:42:06 PDT
Comment on attachment 340136 [details] Patch Rejecting attachment 340136 [details] from commit-queue. Number of test failures exceeded the failure limit. Full output: http://webkit-queues.webkit.org/results/7643639
WebKit Commit Bot
Comment 10 2018-05-10 15:42:08 PDT
Created attachment 340138 [details] Archive of layout-test-results from webkit-cq-02 for mac-sierra The attached test failures were seen while running run-webkit-tests on the commit-queue. Bot: webkit-cq-02 Port: mac-sierra Platform: Mac OS X 10.12.6
WebKit Commit Bot
Comment 11 2018-05-10 16:35:37 PDT
Comment on attachment 340136 [details] Patch Clearing flags on attachment: 340136 Committed r231676: <https://trac.webkit.org/changeset/231676>
WebKit Commit Bot
Comment 12 2018-05-10 16:35:39 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.