Cherry-pick r231676. rdar://problem/40038038

[iOS] Release page load process assertion if the screen is locked
    https://bugs.webkit.org/show_bug.cgi?id=185333

    Reviewed by Geoff Garen.

    We normally take a background process assertion during page loads to allow them to complete
    even if the tab / app is backgrounded. We should however avoid doing so when the backgrounding
    is caused by the screen locking. Keeping the process assertion in this case would prevent the
    whole device from sleeping longer than it should, thus negatively impacting power.

    * UIProcess/Cocoa/NavigationState.h:
    * UIProcess/Cocoa/NavigationState.mm:
    (WebKit::NavigationState::NavigationState):
    (WebKit::NavigationState::releaseNetworkActivityToken):
    (WebKit::NavigationState::didChangeIsLoading):
    * UIProcess/ios/WebPageProxyIOS.mm:
    (WebKit::WebPageProxy::applicationDidEnterBackground):

    Canonical link: https://commits.webkit.org/201015@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231676 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/200942.22@safari-606.1.17-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-606.1.17-branch@231792 268f45cc-cd09-0410-ab3c-d52691b4dbfc